--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,7 +2,6 @@
 <resources>
 
     <string name="app_name">IntroApp1</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
-
+    <string name="hello_world">Hola Mundo</string>
+    <string name="action_settings">Preferencias</string>
 </resources>
